Basic login form with api call

--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -1,5 +1,6 @@
 #loginContainer {
     height: 100vh;
+    align-content: center;
 }
 
 
@@ -10,17 +11,26 @@
 
 #signUpForm {
     color: red;
+
     
 
 
 }
 
+#signInFormTitle {
+    font-size: 35px;
+}
 
 
 #signInForm {
-    color: red;
 
+    border-style: solid;
+    border-width: 5px;
+    border-color: royalblue;
+    border-radius: 15%;
 
-
-
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    padding-right: 30px;
 }
