--- a/frontend/src/styles/ProfilePage.css
+++ b/frontend/src/styles/ProfilePage.css
@@ -13,6 +13,16 @@
 
     width: 85vw;
     height: 80vh;
-
 }
 
+#newMedForm {
+    border-style: solid;
+    border-width: 5px;
+    border-color: royalblue;
+    border-radius: 20px;
+
+    padding-right: auto;
+
+    width: 85vw;
+    height: 80vh;
+}
