Form to display med info

--- a/frontend/src/styles/ProfilePage.css
+++ b/frontend/src/styles/ProfilePage.css
@@ -26,3 +26,13 @@
     width: 85vw;
     height: 80vh;
 }
+
+#medInfoView {
+    border-style: solid;
+    border-width: 5px;
+    border-color: royalblue;
+    border-radius: 20px;
+
+    width: 85vw;
+    height: 80vh;
+}
