--- a/frontend/src/styles/ProfilePage.css
+++ b/frontend/src/styles/ProfilePage.css
@@ -1,9 +1,11 @@
 #profilePageContainer {
     height: 100vh;
-    align-content: center;
 }
 
-
+#profilePageParent {
+    align-content: center;
+    height: 90vh; 
+}
 
 #userPanel {
     border-style: solid;
@@ -11,8 +13,16 @@
     border-color: royalblue;
     border-radius: 20px;
 
+    background-color: #f5f5f5;
+
     width: 85vw;
     height: 80vh;
+}
+
+#newMedFormTitle {
+    font-size: 35px;
+    color: royalblue;
+    font-weight: bold;
 }
 
 #newMedForm {
@@ -21,10 +31,13 @@
     border-color: royalblue;
     border-radius: 20px;
 
-    padding-right: auto;
+    padding-right: 50px;
+    padding-left: 50px;
 
-    width: 85vw;
-    height: 80vh;
+    background-color: #f5f5f5;
+
+    width: 50vw;
+    height: 55vh;
 }
 
 #medInfoView {
@@ -32,6 +45,8 @@
     border-width: 5px;
     border-color: royalblue;
     border-radius: 20px;
+
+    background-color: #f5f5f5;
 
     width: 85vw;
     height: 80vh;
