--- a/frontend/src/styles/ProfilePage.css
+++ b/frontend/src/styles/ProfilePage.css
@@ -17,6 +17,11 @@
 
     width: 85vw;
     height: 80vh;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    padding: 0;
 }
 
 #newMedFormTitle {
@@ -48,6 +53,29 @@
 
     background-color: #f5f5f5;
 
-    width: 85vw;
-    height: 80vh;
+    width: 55vw;
+    height: 42.5vh;
 }
+
+#medInfoViewName {
+    font-size: 50px;
+    color: royalblue;
+    font-weight: bold;
+    
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+}
+
+#colsParent {
+    padding-bottom: 5vh;
+}
+
+#leftCol {
+    padding-right: 10vh;
+    font-size: 1px;
+}
+
+#rightCol {
+    padding-left: 10vh;
+}
+
